feat(MaxProfit): MaxProfit Solution feat(Valid Palindrome): Valid Palindrome Solution

--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -34,6 +34,20 @@
       "environmentVariables": {
 
       }
+    },
+    "ValidPalindrome": {
+      "commandName": "Project",
+      "commandLineArgs": "ValidPalindrome",
+      "environmentVariables": {
+
+      }
+    },
+    "MaxProfit": {
+      "commandName": "Project",
+      "commandLineArgs": "MaxProfit",
+      "environmentVariables": {
+
+      }
     }
   }
 }
