feat(Long Sequence): Long Sequence Solution

--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -48,6 +48,13 @@
       "environmentVariables": {
 
       }
+    },
+    "LongestConsecutive": {
+      "commandName": "Project",
+      "commandLineArgs": "LongestConsecutive",
+      "environmentVariables": {
+
+      }
     }
   }
 }
