chore: Final prices and sorted sqr

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -90,6 +90,20 @@
       "environmentVariables": {
 
       }
+    },
+    "SortedSquares": {
+      "commandName": "Project",
+      "commandLineArgs": "SortedSquares",
+      "environmentVariables": {
+
+      }
+    },
+    "FinalPrices": {
+      "commandName": "Project",
+      "commandLineArgs": "FinalPrices",
+      "environmentVariables": {
+
+      }
     }
   }
 }
